# heidi-engine

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  bench_get_state.py  bench_state_again.py  bench_state_no_cache.py  bench_status.py  bench_telemetry.py  bench_telemetry_bolt.py  benchmark_internal.py  benchmark_status.py  build.sh  copilot_sdk_wrapper.py  copilot_sdk_wrapper_debug.py  debug_start_output.log.trace  docker-compose.yml  engine_config.yaml  git-sdk.py  git-sdk.py:Zone.Identifier  heidid  pyproject.toml  repos.txt  setup_cpp.py  start.sh  test_output.txt  test_telemetry.py  walkthrough.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-autotrain.yml  ci-ml.yml  ci.yml  p7-audit.yml  repo-hygiene.yml
.jules/: bolt.md  sentinel.md
.local/: worklog-phase3-provider.txt
.local/ml/: fine_tuning_guide.md  requirements-ci.txt  requirements-lock-transformers.txt  requirements-lock-unsloth.txt  requirements-transformers-only.txt  requirements-unsloth.txt
.local/ml/data/: raw_sample.jsonl
.local/ml/scripts/: prepare_data.sh  redaction_check.py  setup_python_env.sh  sign_data.py  split_holdout.py  train_adapter.sh
.local/worklog/: phase1-cpp-core-hardening.md  phase4-kernel-bridge-verification.md
.venv3/: pyvenv.cfg
.verify_venv/: pyvenv.cfg
autotrain/: __init__.py  dashboard.py  http.py  telemetry.py
docs/: cpp_optimizations.md  cpp_rewrite_phases_1_to_4.md  daemon_setup.md  dashboard.md  dataset_card.md  getting-started.md  kernel_bridge.md  license_policy.md  rlhf_roadmap.md  teacher_openhei.md  walkthrough_v1.md
docs/.local/spec/: event_schema_map.md  loop_contract.md
docs/test-reports/: 2026-02-24_heidi-engine_deep_test.md
docs/wiki/: CI-&-Release-Process.md  Dashboard-Guide.md  Dataset-Lifecycle.md  Development-Guide.md  HTTP-API-Reference.md  Home.md  Installation-Guide.md  Runtime-Modes.md  Security-Architecture.md
etc/systemd/: heidid.service
heidi_engine/: collect.py  config.yaml  dashboard.html  dashboard.py  doctor.py  finalizer.py  http.py  http_api.py  keystore.py  loop_runner.py  providers.py  pump.py  security.py  state_machine.py  telemetry.py  telemetry_server.py  validator.py
heidi_engine/collect/: openhei_collect.py
heidi_engine/cpp/: heidi_cpp.cpp
heidi_engine/cpp/core/: async_collector.cpp  async_collector.h  clock.cpp  clock.h  config.cpp  config.h  core.cpp  core.h  journal_writer.cpp  journal_writer.h  manifest.cpp  manifest.h  mock_provider.cpp  mock_provider.h  provider.cpp  provider.h  provider_transport.h  provider_transport_curl.cpp  provider_transport_stub.cpp  rlimit.cpp  rlimit.h  run_id.cpp  run_id.h  status_writer.cpp  status_writer.h  subprocess.cpp  subprocess.h
heidi_engine/cpp/daemon/: daemon.cpp  daemon.h  engine_daemon.cpp  engine_daemon.h  main.cpp  rpc_server.cpp  rpc_server.h
heidi_engine/cpp/include/: kernel.h
heidi_engine/cpp/include/heidi/utils/: file_util.h
heidi_engine/cpp/pipeline/: pipeline.cpp  pipeline.h
heidi_engine/kernel_bridge/: __init__.py  bridge.py  config.py  null_transport.py  result.py  transport.py  transport_factory.py
heidi_engine/kernel_bridge/transports/: http_transport.py  unix_socket.py
heidi_engine/teacher/: __init__.py  base.py  openhei_teacher.py
heidi_engine/templates/: cpp.yaml  go.yaml  javascript.yaml  python.yaml
heidi_engine/utils/: io_jsonl.py  openai_compat.py  security_util.py  signature.py
heidi_engine/validation/: semantic_validator.py
proxy/: get_proxy.sh  rotator.py
scripts/: 01_teacher_generate.py  02_validate_clean.py  03_unit_test_gate.py  04_train_qlora.py  05_eval.py  benchmark_02_validate_clean.py  benchmark_bolt.py  benchmark_fuzzy.py  benchmark_pricing.py  benchmark_re.py  benchmark_secrets.py  benchmark_telemetry.py  build-heidid.sh  build_heidid.py  ci_gate.sh  common.sh  dashboard.sh  dashboard_wsl.bat  debug_monitor.sh  global_dedupe.py  heidid.service  loop.sh  loop_repos.sh  menu.py  night_run.sh  one_click_openhei_web_train.sh  replay_journal.py  repro_p7.sh  run_enhance.sh  run_enhanced.sh  run_enhanced_progress.sh  run_enhanced_progress.sh:Zone.Identifier  start_debug_runner.sh  strip_conflicts.py  test.sh  train_only.py  verify_final.py  verify_p6.sh  verify_p7_adversarial.sh  verify_p7_soak.sh  (+2 more)
tests/: _requires_heidi_cpp.py  conftest.py  test_02_validate_clean.py  test_bolt_optimizations.py  test_bolt_vc.py  test_budget_guardrails.py  test_cache.py  test_core_integration.py  test_cost_estimation.py  test_cpp_async.cpp  test_cpp_core.cpp  test_cpp_ext.py  test_daemon.py  test_dashboard.py  test_doctor.py  test_env_leak.py  test_finalizer.py  test_hpo.py  test_http_host_binding.py  test_jsonl_utils.py  test_kernel_bridge.py  test_kernel_bridge_config.py  test_kernel_bridge_result.py  test_kernel_bridge_telemetry.py  test_keystore.py  test_loop_runner.py  test_no_unsafe_heidi_cpp_imports.py  test_openai_compat.py  test_openhei_teacher_parse.py  test_openhei_teacher_sse.py  test_path_traversal.py  test_path_traversal_fix.py  test_perf_baseline.py  test_pipeline.py  test_pump_ready.py  test_redaction.py  test_schema_lock.py  test_sec_redteam.py  test_security.py  test_semantic_validator.py  (+10 more)
tests/fixtures/: openhei_run_stream.jsonl
