[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heidi-engine"
version = "0.1.0"
description = "Heidi Engine - AutoTraining pipeline with real-time dashboard"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["heidi_engine*"]
