[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heidi-engine"
version = "0.1.0"
description = "Heidi Engine - AutoTraining pipeline with real-time dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Heidi AI Team"}
]
keywords = ["machine-learning", "fine-tuning", "lora", "qlora", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich>=14.3.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
ml = [
    "transformers>=4.30.0",
    "peft>=0.4.0",
    "trl>=0.7.0",
    "accelerate>=0.20.0",
    "datasets",
    "bitsandbytes",
    "safetensors",
]

[project.scripts]
autotrain-dashboard = "heidi_engine.dashboard:main"
autotrain-serve = "heidi_engine.http:main"
heidi-telemetry = "heidi_engine.telemetry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["heidi_engine*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
