[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heidi-engine"
version = "0.1.0"
description = "Heidi Engine - AutoTraining pipeline with real-time dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Heidi AI Team"}
]
keywords = ["machine-learning", "fine-tuning", "lora", "qlora", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "optuna>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
]
http = [
    "fastapi==0.129.0",
    "uvicorn==0.41.0",
]
ml = [
    "transformers>=4.30.0",
    "peft>=0.4.0",
    "trl>=0.7.0",
    "accelerate>=0.20.0",
    "datasets",
    "bitsandbytes",
    "safetensors",
]

[project.scripts]
autotrain-dashboard = "heidi_engine.dashboard:main"
autotrain-serve = "heidi_engine.http:main"
heidi-telemetry = "heidi_engine.telemetry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["heidi_engine*"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".local", "tests", "*.sh", "*.bat"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
